tests/miniJava/pos/000786_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( new int [ 0 ] ) java [ 0 ] = 0 ; else { } } }
