tests/miniJava/neg/005055_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java else ) { return 0 ; } }
